Add documentation in transaction
